--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,8 @@
-# Python virtual environment
-.venv/
+# Node dependencies
+node_modules/
 
-# Byte-compiled / optimized / DLL files
-__pycache__/
-*.py[cod]
-
-# Distribution / packaging
+# Build output
 build/
 dist/
-*.egg-info/
-
-# Misc
-*.log
+# Logs
+*.logcoverage/
