--- a/ConfluenceToolsPlugin/manifest.yml
+++ b/ConfluenceToolsPlugin/manifest.yml
@@ -6,14 +6,24 @@ modules:
       resolver:
         function: resolver
       title: Sofia
+
   function:
     - key: resolver
       handler: index.handler
+
 resources:
   - key: main
     path: src/frontend/index.jsx
 
 app:
+  id: ari:cloud:ecosystem::app/da78a79e-0fd4-478a-af6f-fc1b79150e50
   runtime:
     name: nodejs22.x
-  id: ari:cloud:ecosystem::app/cceb4834-30d7-4de7-a643-6c6aa9a205b7
+
+permissions:
+  external:
+    fetch:
+      backend:
+        - "http://localhost:8000"
+    images:
+      - "http://localhost:8000"
